--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@strapi/i18n": "5.22.0",
     "@strapi/plugin-cloud": "5.22.0",
     "@strapi/plugin-users-permissions": "5.22.0",
+    "@strapi/provider-upload-cloudinary": "^5.37.1",
     "@strapi/review-workflows": "5.22.0",
     "@strapi/strapi": "5.22.0",
     "@strapi/upload": "5.22.0",
